
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef scalar_t__ UINT ;
typedef scalar_t__ HFILE ;
typedef int BOOL ;


 int DeleteFileA (int ) ;
 int FILE_BEGIN ;
 int GetLastError () ;
 scalar_t__ HFILE_ERROR ;
 int OF_READ ;
 scalar_t__ _hwrite (scalar_t__,char*,scalar_t__) ;
 scalar_t__ _lclose (scalar_t__) ;
 scalar_t__ _lcreat (int ,int ) ;
 scalar_t__ _llseek (scalar_t__,int ,int ) ;
 scalar_t__ _lopen (int ,int ) ;
 scalar_t__ _lread (scalar_t__,char*,scalar_t__) ;
 int filename ;
 scalar_t__ lstrlenA (char*) ;
 int ok (int,char*,...) ;
 char* sillytext ;
 scalar_t__ strlen (char*) ;

__attribute__((used)) static void test__lread( void )
{
    HFILE filehandle;
    char buffer[10000];
    UINT bytes_read;
    UINT bytes_wanted;
    UINT i;
    BOOL ret;

    filehandle = _lcreat( filename, 0 );
    if (filehandle == HFILE_ERROR)
    {
        ok(0,"couldn't create file \"%s\" (err=%d)\n",filename,GetLastError());
        return;
    }

    ok( HFILE_ERROR != _hwrite( filehandle, sillytext, strlen( sillytext ) ), "_hwrite complains\n" );

    ok( HFILE_ERROR != _lclose(filehandle), "_lclose complains\n" );

    filehandle = _lopen( filename, OF_READ );

    ok( HFILE_ERROR != filehandle, "couldn't open file \"%s\" again (err=%d)\n", filename, GetLastError());

    bytes_read = _lread( filehandle, buffer, 2 * strlen( sillytext ) );

    ok( lstrlenA( sillytext ) == bytes_read, "file read size error\n" );

    for (bytes_wanted = 0; bytes_wanted < strlen( sillytext ); bytes_wanted++)
    {
        ok( 0 == _llseek( filehandle, 0, FILE_BEGIN ), "_llseek complains\n" );
        ok( _lread( filehandle, buffer, bytes_wanted ) == bytes_wanted, "erratic _hread return value\n" );
        for (i = 0; i < bytes_wanted; i++)
        {
            ok( buffer[i] == sillytext[i], "that's not what's written\n" );
        }
    }

    ok( HFILE_ERROR != _lclose(filehandle), "_lclose complains\n" );

    ret = DeleteFileA( filename );
    ok( ret, "DeleteFile failed (%d)\n", GetLastError( ) );
}
